# ros2study

install/: local_setup.sh  setup.sh
install/first_assignment_pkg/lib/first_assignment_pkg/: enterID  getID
install/first_assignment_pkg/share/first_assignment_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/msg_package/share/msg_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/msg_package/share/msg_package/cmake/: msg_package__rosidl_generator_cExport.cmake  msg_package__rosidl_generator_cppExport.cmake  msg_package__rosidl_typesupport_cExport-noconfig.cmake  msg_package__rosidl_typesupport_cExport.cmake  msg_package__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/second_assignment_pkg/lib/second_assignment_pkg/: enter_node  multiply_node  sum_node
install/second_assignment_pkg/share/second_assignment_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/first_assignment_pkg/: package.xml  setup.cfg  setup.py
src/first_assignment_pkg/first_assignment_pkg/: enter_classID.py  get_classID.py
src/msg_package/: CMakeLists.txt  package.xml
src/second_assignment_pkg/: setup.cfg  setup.py
src/second_assignment_pkg/second_assignment_pkg/: enter_node.py  multiply_node.py  sum_node.py
