<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>msg_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="takrop@todo.todo">takrop</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!--
  아래 세 줄은 빌드 시 필요 한 거//
   1. 의존 패키지 
   2. 런타임 단계에서 의존 패키지 
   3. 의존성 그룹
   -->
  <build_depend>rosidl_default_generators</build_depend>  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
